# FeedYou

./: .env-sample  .gitignore  .pre-commit-config.yaml  .python-version  manage.py  pyproject.toml
accounts/: admin.py  apps.py  forms.py  generic_model.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile.py
foodline_main/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
templates/accounts/: registerUser.html
templates/includes/: alerts.html  footer.html  navbar.html
