[tool.poetry]
name = "foodline"
version = "0.1.0"
description = ""
authors = ["Ary"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
